HybridCloudApp/Kubernetes/Backend/Network_Policies/deny_all_rest_api_agent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-rest-api-agent
spec:
  podSelector:
    matchLabels:
      app: iot-backend-rest-api-agent
      tier: rest-api-agent
  policyTypes:
  - Ingress
