HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: iot-backend
      tier: mariadb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: iot-backend-mqtt-db-agent
    ports:
    - protocol: TCP
      port: 3306
