HybridCloudApp/Kubernetes/Backend/Network_Policies/permit_port_5050_rest_api_agent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-port-5050-rest-api-agent
spec:
  podSelector:
    matchLabels:
      app: iot-backend-rest-api-agent
      tier: rest-api-agent
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 5050
