HybridCloudApp/Kubernetes/Backend/Network_Policies/permit_port_5111_rest_api_agent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rest-api-agent-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: iot-backend-rest-api-agent
      tier: rest-api-agent
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 5111
